<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="add_day_rate">Add day rate</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="delete_day_rate">Delete day rate</string>
    <string name="main_activity_usage">Usages</string>
    <string name="main_activity_costs">Costs</string>
    <string name="main_activity_compare">Compare</string>
    <string name="channel_name">EPO Progress</string>
    <string name="channel_description">Shows the status of background tasks</string>
    <string name="supplier_plan">Supplier:Plan</string>
    <string name="net">Net</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="bonus">Bonus</string>
    <string name="fixed">Fixed</string>
    <string name="open">Open</string>
    <string name="fetch">Fetch</string>
    <string name="export">Export</string>
    <string name="plans">Costs</string>
    <string name="scenarios">Usage(s)</string>
    <string name="comparisons">Comparisons</string>
    <string name="copy">Copy</string>
    <string name="link">Link</string>
    <string name="help">Help</string>
    <string name="add_a_new_supplier_plan">Add a new supplier plan</string>
    <string name="scenario_with_aspect">Eligible scenarios</string>
    <string name="cancel">Cancel</string>
    <string name="importlp">Import</string>
    <string name="delete">Delete</string>
    <string name="UpdateLocation">Set location using GPS</string>
    <string name="DownloadData">Download and save</string>
    <string name="DataDownloaded">Data downloaded</string>
    <string name="DownloadNecessary">Download necessary</string>
    <string name="DataInDB">Data in DB</string>
    <string name="DBUpdateNecessary">DB update necessary</string>
    <string name="NoBestCost">Best cost = €???.??</string>
    <string name="BestSupplier">Best supplier</string>
    <string name="FetchUpdateData">Fetch / Update data</string>
    <string name="Optimized">Optimized</string>
    <string name="ConnectedInverterName">Inverter name</string>
    <string name="ConnectedInverterMPPT">Inverter mppt</string>
    <string name="linkedItem">Linked item</string>
    <string name="add_a_new_battery">Add a new battery</string>
    <string name="NoChartData">Charts will appear here once the simulation is complete.</string>
    <string name="load">Load</string>
    <string name="feed">Feed</string>
    <string name="pv">PV</string>
    <string name="pv_to_battery">PV to Battery</string>
    <string name="pv_to_load">PV to Load</string>
    <string name="battery_2_load">Battery 2 Load</string>
    <string name="ev_schedule">EV Schedule</string>
    <string name="hot_water_schedule">Hot Water Schedule</string>
    <string name="ev_diversion">EV Diversion</string>
    <string name="hot_water_diversion">Hot Water Diversion</string>
    <string name="state_of_charge">State of Charge</string>
    <string name="hot_water_temperature">Hot Water Temperature</string>
    <string name="EmptyComparisonsText">Price comparisons will appear here. \n\n Select usage(s) and costs from the other tabs to control the content of this tab\n\nYou can sort the table, and select the fields to show.\n\nTilting the screen (landscape) will better fit more fields.\n\nProgress of recently added costs and usages can be seen in the notification area.\n\nSelecting a comparison will pop up a usage graph (pie chart) that shows how much electricity was purchased at each rate</string>
    <string name="Total">Total</string>
    <string name="Split">Split</string>
    <string name="Del">Del</string>
    <string name="To">To</string>
    <string name="From">From</string>
    <string name="GridExportMax">Grid export max (kW)</string>
    <string name="GridImportMax">Grid import max (kW)</string>
    <string name="HourlyBaseLoad">Hourly base load (kWh)</string>
    <string name="AnnualUsage">Annual usage (kWh)</string>
    <string name="DistributionSource">Distribution source</string>
    <string name="NoScenarioText">\"The usage profile captures how electricity is used. Use the six buttons to configure the usage profile.\n\nUsage profiles must include at least a load profile for the house (yellow highlight when missing). Where you specify hourly, daily and monthly distribution as well as the annual and base loads. There are several sources for distribution.\n\nThis tab is also where you can describe your (planned) solar installation.Panel(s) and inverter(s) are needed for electricity generation. \n\nBatteries, hot water systems and electric vehicles can also be configured, scheduled and, for water and EV\'s, diverted.\n\nOnce configured and saved, a simulation will run. Simulation results will  appear in the details tab shortly after. Simulation progress is visible in the notification area. \"</string>
    <string name="NoPricePlansText">There are no price plans created.\n\nAt least one usage price plan is needed for the application to simulate and compare. \n\nPrice plans are a standard way to describe the contract with your supplier. You can add as many suppliers and plans as you like. \n\nYou can add a price plans manually using the \'+\' button in the bottom right, and using the menu, download or load from a file. \n\nOnce created, you can delete, copy and view/edit usage profiles from this tab. \n\nSelecting a usage will add it to the comparison tab.</string>
    <string name="NoScenariosText">There are no usage profiles created.\n\nAt least one usage profile is needed for the application to simulate and compare. \n\nUsage profiles allow you to describe how you use electricity. You can add as many usage profiles as you like.\n\nYou can add a usage profile manually using the \'+\' button in the bottom right, and using the menu, download or load from a file. \n\nOnce created, you can delete, copy and view/edit usage profiles from this tab. \n\nSelecting a usage will add it to the comparison tab.</string>
    <string name="Sun">Sun</string>
    <string name="Sat">Sat</string>
    <string name="Fri">Fri</string>
    <string name="Thu">Thu</string>
    <string name="Wed">Wed</string>
    <string name="Tue">Tue</string>
    <string name="Mon">Mon</string>
    <string name="ToFormat">To (MM/DD)</string>
    <string name="FromFormat">From (MM/DD)</string>
    <string name="NewRateDouble">11.1</string>
    <string name="Hour24">24:00</string>
    <string name="Hour0">00:00</string>
    <string name="Spacer">.....................................................................................................................................................</string>
    <string name="Reference">Reference</string>
    <string name="LastUpdate">Last update</string>
    <string name="SignUpBonus">Sign up bonus (€)</string>
    <string name="StandingCharges">Standing charges (€)</string>
    <string name="FeedInRate" tools:ignore="TypographyOther">Feed in rate (c)</string>
    <string name="Plan">Plan</string>
    <string name="Supplier">Supplier</string>
    <string name="Settings">Settings</string>
    <string name="schedule">Schedule</string>
    <string name="divert">Divert</string>
    <string name="no_simulation_data_available">No simulation data available</string>
    <string name="default_scenario_detail_date">23/06</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="pick_a_date_to_display">Pick a date to display</string>
    <string name="go_back_one_day">Go back one day</string>
    <string name="go_forward_one_day">Go forward one day</string>
    <string name="filter_graph_content">Filter graph content</string>
    <string name="UsageName">Usage name</string>
    <string name="domestic_load_profile">Domestic load profile</string>
    <string name="inverter_configuration_disabled">Inverter configuration disabled</string>
    <string name="inverter_configured">Inverter configured</string>
    <string name="inverter_configuration">Inverter configuration</string>
    <string name="solar_configuration_disabled">Solar configuration disabled</string>
    <string name="solar_data_loaded">Solar data loaded</string>
    <string name="solar_panels_configured">Solar panels configured</string>
    <string name="solar_panel_configuration">Solar panel configuration</string>
    <string name="ev_charging_scheduled">EV charging scheduled</string>
    <string name="ev_diversion_set">EV diversion set</string>
    <string name="ev_configuration_disabled">EV configuration disabled</string>
    <string name="ev_configuration">EV configuration</string>
    <string name="water_heating_scheduled">Water heating scheduled</string>
    <string name="excess_solar_diversion_to_water_heating_set">Excess solar diversion to water heating set</string>
    <string name="hot_water_system_configured">Hot water system configured</string>
    <string name="hot_water_configuration_disabled">Hot water configuration disabled</string>
    <string name="hot_water_system_configuration">Hot water system configuration</string>
    <string name="battery_scheduled_charge_set">Battery scheduled charge set</string>
    <string name="battery_configured">Battery configured</string>
    <string name="battery_configuration_disabled">Battery configuration disabled</string>
    <string name="battery_configuration">Battery configuration</string>
    <string name="load_profile_configuration_disabled">Load profile configuration disabled</string>
    <string name="load_profile_configured">Load profile configured</string>
    <string name="no_solar_data">Cannot find solar data for these panels. Remember to fetch or update solar data for each set of panels.</string>
    <string name="daily_distribution">Distribution of electricity usage by day of week</string>
    <string name="hourly_distribution">Distribution of electricity usage by hour of day</string>
    <string name="yearly_distribution">Distribution of electricity usage by month of year</string>
    <string name="alphaess">AlphaESS Open API</string>
    <string name="home_assistant">Home Assistant</string>
    <string name="solis_cloud">Add source</string>
    <string name="esbn_hdf_file">ESBN Smart Meter Data</string>
    <string name="dataMgmtOnScreenHelp">Manage your data sources</string>
    <string name="display_scale">Display scale</string>
    <string name="by_hour">By Hour</string>
    <string name="by_week">By Week</string>
    <string name="by_day_of_year">By Day of Year</string>
    <string name="by_month">By Month</string>
    <string name="by_year">By Year</string>
    <string name="steps_prev_next">Steps: Prev | Next</string>
    <string name="by_day">By Day</string>
    <string name="all_months">All months</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="no_dates_selected">No dates selected</string>
    <string name="selected_date_range">Selected date range:</string>
    <string name="pick_date_range">Pick date range</string>
    <string name="generate_usage">Generate usage</string>
    <string name="generation_status">Generation status:</string>
    <string name="not_requested">Not requested</string>
    <string name="compare">Compare</string>
    <string name="ui2_tab_dashboard">Dashboard</string>
    <string name="ui2_tab_scenarios">Scenarios</string>
    <string name="ui2_tab_comparisons">Comparisons</string>
    <string name="ui2_tab_directors">Directors</string>
</resources>