<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/load"
        android:title="@string/load"
        android:checked="true"
        android:checkable="true"/>
    <item
        android:id="@+id/feed"
        android:checked="true"
        android:title="@string/feed"
        android:checkable="true"/>
    <item
        android:id="@+id/buy"
        android:checked="false"
        android:title="@string/buy"
        android:checkable="true"/>
    <item
        android:id="@+id/pv"
        android:checked="true"
        android:title="@string/pv"
        android:checkable="true"/>
    <item
        android:id="@+id/pv2bat"
        android:checked="false"
        android:title="@string/pv_to_battery"
        android:checkable="true"/>
    <item
        android:id="@+id/pv2load"
        android:checked="false"
        android:title="@string/pv_to_load"
        android:checkable="true"/>
    <item
        android:id="@+id/bat2load"
        android:checked="false"
        android:title="@string/battery_2_load"
        android:checkable="true"/>
    <item
        android:id="@+id/evSchedule"
        android:checked="false"
        android:title="@string/ev_schedule"
        android:checkable="true"/>
    <item
        android:id="@+id/hwSchedule"
        android:checked="false"
        android:title="@string/hot_water_schedule"
        android:checkable="true"/>
    <item
        android:id="@+id/evDivert"
        android:checked="false"
        android:title="@string/ev_diversion"
        android:checkable="true"/>
    <item
        android:id="@+id/hwDivert"
        android:checked="false"
        android:title="@string/hot_water_diversion"
        android:checkable="true"/>
    <item
        android:id="@+id/soc"
        android:checked="true"
        android:title="@string/state_of_charge"
        android:checkable="true"/>
    <item
        android:id="@+id/hwTemp"
        android:checked="false"
        android:title="@string/hot_water_temperature"
        android:checkable="true"/>
</menu>