<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023. Tony Finnerty
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/month_group">
        <item
            android:id="@+id/all"
            android:title="@string/all_months">
        </item>
        <item
            android:id="@+id/jan"
            android:title="@string/january">
        </item>
        <item
            android:id="@+id/feb"
            android:title="@string/february">
        </item>
        <item
            android:id="@+id/mar"
            android:title="@string/march">
        </item>
        <item
            android:id="@+id/apr"
            android:title="@string/april">
        </item>
        <item
            android:id="@+id/may"
            android:title="@string/may">
        </item>
        <item
            android:id="@+id/jun"
            android:title="@string/june">
        </item>
        <item
            android:id="@+id/jul"
            android:title="@string/july">
        </item>
        <item
            android:id="@+id/aug"
            android:title="@string/august">
        </item>
        <item
            android:id="@+id/sep"
            android:title="@string/september">
        </item>
        <item
            android:id="@+id/oct"
            android:title="@string/october">
        </item>
        <item
            android:id="@+id/nov"
            android:title="@string/november">
        </item>
        <item
            android:id="@+id/dec"
            android:title="@string/december">
        </item>
    </group>


</menu>