<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".scenario.loadprofile.LoadProfileActivity">

    <item
        android:id="@+id/lp_info"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info"/>
    <item
        android:id="@+id/lp_edit"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"/>
    <item
        android:id="@+id/lp_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/lp_save"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/save"/>
    <item
        android:id="@+id/lp_import"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_file_open_24"
        android:title="@string/importlp"/>
    <item
        android:id="@+id/lp_copy"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_content_copy_24"
        android:title="@string/copy"/>
    <item
        android:id="@+id/lp_link"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_link_24"
        android:title="@string/link"/>
    <item
        android:id="@+id/lp_help"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/help"/>
    <item
        android:id="@+id/lp_delete"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete"
        android:visible="false"/>
</menu>