<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/load"
        android:icon="@drawable/ic_baseline_file_open_24"
        android:title="@string/open"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/download"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/stat_sys_download"
        android:title="@string/fetch"/>
    <item
        android:id="@+id/export"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/export">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/share_plans"
                    android:title="@string/plans">
                </item>
                <item
                    android:id="@+id/share_scenarios"
                    android:title="@string/scenarios">
                </item>
                <item
                    android:id="@+id/share_comparison"
                    android:title="@string/comparisons">
                </item>
            </group>
        </menu>
    </item>
</menu>