<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023. Tony Finnerty
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/display_scale"
        android:id="@+id/display_scale"
        app:showAsAction="never" />
    <group android:checkableBehavior="single"
        android:id="@+id/display_group">
        <item
            android:id="@+id/display_hour"
            android:title="@string/by_hour">
        </item>
        <item
            android:id="@+id/display_week"
            android:title="@string/by_week">
        </item>
        <item
            android:id="@+id/display_doy"
            android:title="@string/by_day_of_year">
        </item>
        <item
            android:id="@+id/display_month"
            android:title="@string/by_month">
        </item>
        <item
            android:id="@+id/display_year"
            android:title="@string/by_year">
        </item>
    </group>

    <item
        android:title="@string/steps_prev_next"
        app:showAsAction="never" />
    <group android:checkableBehavior="single"
        android:id="@+id/step_group">
        <item
            android:id="@+id/step_day"
            android:title="@string/by_day">
        </item>
        <item
            android:id="@+id/step_week"
            android:title="@string/by_week">
        </item>
        <item
            android:id="@+id/step_month"
            android:title="@string/by_month">
        </item>
        <item
            android:id="@+id/step_year"
            android:title="@string/by_year">
        </item>
    </group>

</menu>