<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".priceplan.PricePlanActivity">

    <item
        android:id="@+id/info"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info"/>
    <item
        android:id="@+id/edit_a_plan"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/edit"/>
    <item
        android:id="@+id/add_a_day_rate"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_day_rate"/>
    <item
        android:id="@+id/export_a_plan"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"/>
    <item
        android:id="@+id/del_a_day_rate"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete_day_rate"/>
    <item
        android:id="@+id/save_a_plan"
        app:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_price_plan"/>
</menu>