<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2024. Tony Finnerty
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".importers.esbn.ImportESBNGenerateScenario">

<TableLayout
    android:id="@+id/buttonTable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:stretchColumns="0,1"
    app:layout_constraintTop_toTopOf="parent">

    <TableRow >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gen_pick_range"
            android:text="@string/pick_date_range" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gen_scenario"
            android:text="@string/generate_usage"
            android:enabled="false" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/selected_date_range"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/gen_selected_dates"
            android:layout_marginTop="20dp"
            android:text="@string/no_dates_selected"
            android:gravity="center_horizontal"/>
    </TableRow>
    <TableRow>
        <TextView android:text="@string/generation_status"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"/>
        <TextView
            android:id="@+id/gen_selected_status"
            android:layout_marginTop="20dp"
            android:text="@string/not_requested"
            android:gravity="center_horizontal"/>
    </TableRow>
</TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>