<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2026. Tony Finnerty
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ui2DashboardFragment"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/ui2_tab_dashboard" />
    <item
        android:id="@+id/ui2SimulationsFragment"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/ui2_tab_scenarios" />
    <item
        android:id="@+id/ui2ComparisonsFragment"
        android:icon="@drawable/ic_baseline_compare_arrows_24"
        android:title="@string/ui2_tab_comparisons" />
    <item
        android:id="@+id/ui2DirectorsFragment"
        android:icon="@drawable/ic_director_24"
        android:title="@string/ui2_tab_directors" />
</menu>
