<!--
  ~ Copyright (c) 2023. Tony Finnerty
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".importers.alphaess.ImportAlphaActivity">

    <item
        android:id="@+id/load"
        android:icon="@drawable/ic_baseline_file_open_24"
        android:title="@string/open"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/export"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_save_24"
        android:title="@string/export">
    </item>
    <item
        android:id="@+id/compare"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/baseline_splitscreen_24"
        android:title="@string/compare">
    </item>

    <item
        android:id="@+id/help"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_help_outline_24"
        android:title="@string/help"/>
</menu>