<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2023. Tony Finnerty
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/Settings"/>
    <item
        android:id="@+id/schedule"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_access_time_24"
        android:title="@string/schedule"/>
    <item
        android:id="@+id/divert"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_baseline_call_split_24"
        android:title="@string/divert"/>
</menu>